Fix double scrollbar

--- a/css/main.scss
+++ b/css/main.scss
@@ -53,6 +53,7 @@ body{
         width: 100%;
         display: flex;
         flex-direction: row;
+        overflow: hidden;
 
         &.vertical {
             flex-direction: column;
